[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/objects/powerups/powerup.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/objects/powerups/powerup_magnet.gd" type="Script" id=2]
[ext_resource path="res://resources/textures/powerups/magnet.png" type="Texture" id=3]

[node name="PowerupMagnet" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="CharactersDetection" type="Area2D" parent="." index="1"]
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CharactersDetection" index="0"]
polygon = PoolVector2Array( -44, -3, 43, -3, 50, -37, 34, -63, 0, -76, -34, -63, -50, -37 )

[node name="LifeTimer" type="Timer" parent="." index="2"]
wait_time = 12.0
autostart = true

[connection signal="body_entered" from="CharactersDetection" to="." method="_on_body_entered"]
[connection signal="body_exited" from="CharactersDetection" to="." method="_on_body_exited"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
